samples/_failures_safe/1761640169_0a7efc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_142da219.c: In function ‘main’:
./samples/SAFE/__tmp_142da219.c:153:20: error: missing terminating " character
  153 |             printf("No entries
      |                    ^~~~~~~~~~~
./samples/SAFE/__tmp_142da219.c:153:13: error: expected expression at end of input
  153 |             printf("No entries
      |             ^~~~~~
./samples/SAFE/__tmp_142da219.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_142da219.c:153:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_142da219.c:153:13: error: expected declaration or statement at end of input
